@@ -25,6 +25,7 @@ Hedgehog 2.3.0 - 2016-09-09
 * Default plot is now a configuration option. To specify a plot use the 'Hedgehog
   internal plot name' as listed in the User Guide.
 * Update RSSAC report header format to match RSSC002v3 report.
+* Enhancements to datafiles_create_summary script.
 
 
 Hedgehog 2.2.0 - 2016-08-31
